--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,20 @@ body {
     background-color: var(--color-sand-beige);
     color: var( --color-koala-grey);
 } 
+.mobile-view {
+  display: block;
+}
+
+.desktop-view {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-view {
+    display: none;
+  }
+
+  .desktop-view {
+    display: block;
+  }
+}
